# olcCodejam2025_PixelShaper

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM_BUILD.md  LINUX_BUILD.md  MACOS_BUILD.md  README.md  build-macos.sh  run-linux.sh  verify-macos-setup.sh
.github/: copilot-instructions.md
.github/workflows/: build-macos.yml  cmake-multi-platform.yml
assets/examples/: icecream.pshape  landscape.pshape  smiley.pshape
src/: gui.cpp  gui.h  history.cpp  history.h  main.cpp  olcPixelGameEngine.h  shaper.cpp  shaper.h  stb_image_write.cpp
